Added flashing overlay window whenever you get infected by parasite

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Phosani QOL
+author=Kadery
 support=
-description=An example greeter plugin
+description=QoL Features for Phosani's Nightmare
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.PhosanisQOL.PhosanisQOL
